Fix main overflowing outside of body because of align items center

--- a/solutions/04. recipe-page/style.css
+++ b/solutions/04. recipe-page/style.css
@@ -19,7 +19,6 @@
     margin: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
     font-family: 'Outfit', 'Young Serif', sans-serif;
     background-color: var(--Stone100);
     font-size: .9em;
@@ -30,7 +29,6 @@ main {
     background-color: var(--White);
     border-radius: 10px;
     padding: 3vh;
-    margin-bottom: 10px;
     height: fit-content;
 }
 
